1.3. Define API and refactored enums in OpenAPI-definition.yaml
