# ms-conveyor-core/ms-conveyor-impl/src/main/java/com/neoflex/conveyor/controller/ExampleController.java
@@ -1,16 +1,0 @@
-package com.neoflex.conveyor.controller;
-
-import com.neoflex.api.ExampleApi;
-import lombok.RequiredArgsConstructor;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.RestController;
-
-@RestController
-@RequiredArgsConstructor
-public class ExampleController implements ExampleApi {
-
-  @Override
-  public ResponseEntity<Void> exampleGet() {
-    return ResponseEntity.ok(null);
-  }
-}
